Upped to LWJGL3 and added JVM args to get rid of the SEVERE warnings of illegal reflection allocation. Chasing bug in ModelViewState and LeafDataZone