@@ -1,3 +1,7 @@
+/*plugins {
+    id 'com.stehno.natives' version '0.3.1'
+}
+*/
 subprojects {
     apply plugin: "java"
     repositories {
@@ -11,15 +15,22 @@ mainClassName='infinity.Main'
 
 version = "1.0.0"
 
-applicationDefaultJvmArgs = ["-Xmx1024m", "-Xms512m", "-XX:MaxDirectMemorySize=1024m"]
+applicationDefaultJvmArgs = ["-Xmx1024m", "-Xms512m", "-XX:MaxDirectMemorySize=1024m","--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"]
+
 
 dependencies {
+    //implementation project(":jme3-core")
     implementation "org.jmonkeyengine:jme3-core:$jmeVersion" 
+    //implementation project(":jme3-desktop")
     implementation "org.jmonkeyengine:jme3-desktop:$jmeVersion"
     implementation "org.jmonkeyengine:jme3-effects:$jmeVersion"
     implementation "org.jmonkeyengine:jme3-plugins:$jmeVersion"
-    implementation "org.jmonkeyengine:jme3-lwjgl:$jmeVersion"
+    //mplementation project(":jme3-lwjgl3")
+    implementation "org.jmonkeyengine:jme3-lwjgl3:$jmeVersion"
     
+    // https://mvnrepository.com/artifact/org.lwjgl/lwjgl
+    //compile group: 'org.lwjgl', name: 'lwjgl', version: '3.2.3'
+
     implementation 'org.slf4j:slf4j-api:1.7.13'
     implementation 'org.apache.logging.log4j:log4j-api:2.5'
     implementation 'org.apache.logging.log4j:log4j-core:2.5'
@@ -92,6 +103,10 @@ dependencies {
     
     //We're using a java port of http://www.angusj.com/delphi/clipper.php to do polygon boolean operations
     implementation files('libs/Clipper-6.4.2.jar')
+    
+    
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 }
 
 jar {
